# Omni-Zero-V4.0

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_experiment.py
omni_zero/: __init__.py  config.py  main.py  model.py  modules.py  sim.py  training.py  utils.py
tests/: test_core.py  test_modules.py
